# EGGuard

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
deploy/: config.yaml
deploy/cron.d/: egguard
docs/: architecture.md
scripts/: egguard
src/egguard/: __init__.py  __main__.py  categories.py  cli.py  color.py  config.py  engine.py  fetcher.py  parser.py  policy.py  refresh.py  state.py  tui.py
tests/: conftest.py  test_categories.py  test_cli.py  test_color.py  test_config.py  test_engine.py  test_fetcher.py  test_parser.py  test_policy.py  test_refresh.py  test_tui.py
